// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should render with border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 iSFAiI group"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow should render without border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 dLjWKP group"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;
